# historical-quest

./: .gitignore  README.md  pyproject.toml
backend/: pyproject.toml
backend/backend/: settings.py  urls.py
backend/backend/api/: admin.py  models.py  serializers.py  urls.py  views.py
backend/backend/api/migrations/: 0001_initial.py  0002_rename_telegram_user_completedstats_telegram_id_and_more.py  0003_alter_step_quest.py  0004_ending_option_points_delete_completedstats.py
backend/backend/templates/: index.html  thumbnail.html
client/: api.py  bot.py  pyproject.toml  types.py
client/src/: api.py  bot.py  models.py  quests_storage.py
client/src/handlers/: quests.py
